# HoaLibrary

./: .gitignore
PureData/: Makefile.am  configure.ac  hoa-meta.pd.in  hoa.library.cbp  hoa.library.cpp  hoa.pd.h
PureData/PD2D/: Makefile.am
PureData/PD3D/: Makefile.am
PureData/PDCommon/: Makefile.am  hoa.converter~.cpp
PureData/Package/HoaLibrary/: Makefile.am
PureData/Package/HoaLibrary/helps/: Makefile.am
PureData/Package/HoaLibrary/media/: Makefile.am
PureData/Package/HoaLibrary/misc/: Makefile.am
PureData/Package/HoaLibrary/patchers/: Makefile.am
PureData/Package/HoaLibrary/tutorials/: Makefile.am
Sources/: Hoa.h  HoaDefs.h  Makefile.am  configure.ac
Sources/Hoa2D/: Makefile.am
Sources/Hoa3D/: Makefile.am
Sources/HoaCommon/: Converter.h  Makefile.am
