AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libHoa2D.la

libHoa2D_la_CXXFLAGS = -s -O2 -fPIC -fpermissive 
libHoa2D_la_LDFLAGS =
libHoa2D_la_LIBADD = 

libHoa2D_la_SOURCES = Ambisonic.cpp \
 Ambisonic.h \
 ChannelManager.cpp \
 ChannelManager.h \
 Decoder.cpp \
 Decoder.h \
 Encoder.cpp \
 Encoder.h \
 Hoa2D.h \
 Map.cpp \
 Map.h \
 Meter.cpp \
 Meter.h \
 Optim.cpp \
 Optim.h \
 Planewaves.cpp \
 Planewaves.h \
 Projector.cpp \
 Projector.h \
 Recomposer.cpp \
 Recomposer.h \
 Rotate.cpp \
 Rotate.h \
 Scope.cpp \
 Scope.h \
 Vector.cpp \
 Vector.h \
 Wider.cpp \
 Wider.h


