AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libHoa3D.la

libHoa3D_la_CXXFLAGS = -s -O2 -fPIC -fpermissive 
libHoa3D_la_LDFLAGS =
libHoa3D_la_LIBADD =

libHoa3D_la_SOURCES = Ambisonic_3D.cpp \
 Ambisonic_3D.h \
 Decoder_3D.cpp \
 Decoder_3D.h \
 Encoder_3D.cpp \
 Encoder_3D.h \
 Hoa3D.h \
 Map_3D.cpp \
 Map_3D.h \
 Meter_3D.cpp \
 Meter_3D.h \
 Optim_3D.cpp \
 Optim_3D.h \
 Planewaves_3D.cpp \
 Planewaves_3D.h \
 Rotate_3D.cpp \
 Rotate_3D.h \
 Scope_3D.cpp \
 Scope_3D.h \
 Vector_3D.cpp \
 Vector_3D.h \
 Wider_3D.cpp \
 Wider_3D.h


