AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libHoaCommon.la

libHoaCommon_la_CXXFLAGS = -s -O2 -fPIC -fpermissive 
libHoaCommon_la_LDFLAGS =
libHoaCommon_la_LIBADD =

libHoaCommon_la_SOURCES = HoaCommon.h \
 Source.cpp \
 Source.h \
 SourcesGroup.cpp \
 SourcesGroup.h \
 SourcesManager.cpp \
 SourcesManager.h



