AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoahelpdir=$(pkglibdir)/helps

dist_hoahelp_DATA = hoa.2d.decoder~-help.pd \
 hoa.2d.encoder~-help.pd \
 hoa.2d.map~-help.pd \
 hoa.2d.meter~-help.pd \
 hoa.2d.optim~-help.pd \
 hoa.2d.projector~-help.pd \
 hoa.2d.recomposer~-help.pd \
 hoa.2d.rotate~-help.pd \
 hoa.2d.scope~-help.pd \
 hoa.2d.space-help.pd \
 hoa.2d.wider~-help.pd \
 hoa.3d.decoder~-help.pd \
 hoa.3d.encoder~-help.pd \
 hoa.3d.map~-help.pd \
 hoa.3d.meter~-help.pd \
 hoa.3d.optim~-help.pd \
 hoa.3d.scope~-help.pd \
 hoa.3d.wider~-help.pd \
 hoa.connect-help.pd \
 hoa.dac~-help.pd \
 hoa.fx.convolve~-help.pd \
 hoa.fx.delay~-help.pd \
 hoa.fx.freeverb~-help.pd \
 hoa.fx.gain~-help.pd \
 hoa.fx.mirror~-help.pd \
 hoa.fx.ringmod~-help.pd \
 hoa.io-help.pd \
 hoa.map-help.pd \
 hoa.pi~-help.pd \
 hoa.pi-help.pd \
 hoa.process~-help.pd \
 hoa.syn.delay~-help.pd \
 hoa.syn.encoder~-help.pd \
 hoa.syn.grain~-help.pd \
 hoa.syn.ringmod~-help.pd \
 hoa.thisprocess~-help.pd
