AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoadir=$(pkglibdir)/misc

dist_hoa_DATA = hoa.2d.txt \
 hoa.3d.txt \
 hoa.args.map.pd \
 hoa.common.txt \
 hoa.help.also.pd \
 hoa.help.header.pd \
 hoa.help.pub.pd \
 hoa.ioexample~.pd \
 hoa.mode.sel.pd \
 hoa.objects.txt \
 hoa.processexample.pd \
 hoa.process.txt \
 hoa.procexample~.pd \
 hoa.soundcoat.pd \
 hoa.soundgrain.pd \
 hoa.soundrone.pd \
 hoa.thisprocexample2~.pd \
 hoa.thisprocexample~.pd \
 hoa.tri~.pd \
 hoa.tuto.gain~.pd \
 hoa.tuto.header.pd \
 hoa.tutos.txt \
 hoa.tuto.txt \
 logo.gif

