AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoadir=$(pkglibdir)/patchers

dist_hoa_DATA = hoa.fx.convolve~.pd \
 hoa.fx.delay~.pd \
 hoa.fx.freeverb~.pd \
 hoa.fx.gain~.pd \
 hoa.fx.mirror~.pd \
 hoa.fx.ringmod~.pd \
 hoa.syn.delay~.pd \
 hoa.syn.encoder~.pd \
 hoa.syn.grain~.pd \
 hoa.syn.ringmod~.pd



