AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoatutorialsdir=$(pkglibdir)/tutorials

dist_hoatutorials_DATA = Tutorial_1_Decoding.pd \
 Tutorial_1_Encoding.pd \
 Tutorial_1_Harmonics.pd \
 Tutorial_1_Introduction.pd \
 Tutorial_1.pd \
 Tutorial_1_Resolution.pd \
 Tutorial_1_Space.pd \
 Tutorial_2_Introduction.pd \
 Tutorial_2.pd \
 Tutorial_2_Space.pd
